--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "clase_11",
+  "name": "iot_solutions_web",
   "version": "1.0.0",
-  "description": "",
+  "description": "Página web para emprendimiento de IoT",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
